--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "body-parser": "^2.2.2",
     "cors": "^2.8.6",
     "express": "^5.2.1",
+    "fast-json-stable-stringify": "^2.1.0",
     "proper-lockfile": "^4.1.2",
+    "safe-regex": "^2.1.1",
     "uuid": "^13.0.0",
     "winston": "^3.19.0",
     "zod": "^4.3.6"
@@ -59,6 +61,7 @@
     "@types/jest": "^30.0.0",
     "@types/node": "^25.1.0",
     "@types/proper-lockfile": "^4.1.4",
+    "@types/safe-regex": "^1.1.6",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.54.0",
     "@typescript-eslint/parser": "^8.54.0",
